[tool.poetry]
name = "datenfragen"
version = "0.1.0"
description = ""
authors = ["Patrick Simon <patrick@rickroman.de>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
nbconvert = "^6.5.0"
matplotlib = "^3.5.2"
numpy = "^1.22.4"
pandas = "^1.4.2"
seaborn = "^0.11.2"
altair = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
